# sharun-CPP

./: .gitignore  CMakeLists.txt  README.md  embed_compress.c  lib4bin
.github/workflows/: ci.yml
src/: embed_data.c  env.c  main.c  sharun.h  utils.c
